--- a/html/01_CSS개요,CSS선택자1.html
+++ b/html/01_CSS개요,CSS선택자1.html
@@ -68,7 +68,7 @@
         
         *{
             /* 모든 텍스트에 밑줄 */
-            text-decoration: underline;
+            /* text-decoration: underline; */
 
             /* 모든 요소의 폰트(글꼴) 지정 == 기본 폰트 지정  */
             font-family: D2Coding;
@@ -89,7 +89,7 @@
             font-style: normal;
         }
         *{
-            font-family: 'JalnanGothic';
+            font-family: 'D2Coding';
         }
 
 
@@ -113,7 +113,7 @@
     <pre>
         현재 문서 내에서 특정 요소를 선택하는 문자 또는 문자열(기호)
 
-        *요소 (Element) <시작태그 속성=속성값> 내용 </종료태그> : 이것들을 요소라고 한다
+        *요소 (Element) <시작태그 속성=속성값> 내용 <(슬래시)종료태그> : 이것들을 요소라고 한다
     </pre>
 
     <ul>
