--- a/html/01_CSS개요,CSS선택자1.html
+++ b/html/01_CSS개요,CSS선택자1.html
@@ -32,7 +32,7 @@
         }
 
 
-        /* id(#) 선택자  */
+        /* id 선택자 : (#) */
 
         /* HTML문서 내에서 id가 중복되는 경우가 없게 해야된다! */
         #li1{background-color: rgb(235, 174, 174);}
@@ -74,7 +74,7 @@
             font-family: D2Coding;
         }
 
-        /* 웹 폰트 적용하기 */
+        /* 웹 폰트 적용하기 (눈누)*/
         @font-face {
             font-family: 'JalnanGothic';
             src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_231029@1.1/JalnanGothic.woff') format('woff');
