오후1교시_css레이아웃 스타일 border padding margin

--- a/html/07_레이아웃스타일1.html
+++ b/html/07_레이아웃스타일1.html
@@ -155,8 +155,11 @@
 
         <h3>田 만들기2(상하,좌우2분할)</h3>
         <!-- 자동으로줄이바뀌는 inline특징을 이용 -->
+        <!-- 줄간격(line-height 0으로 설정) -->
         <div class="container" id="test5">
             <div></div><div></div><div></div><div></div>
+
+            
         </div>
 
 
