--- a/html/08_레이아웃스타일2.html
+++ b/html/08_레이아웃스타일2.html
@@ -127,3 +127,11 @@
 
 </body>
 </html>
+
+1/10 수요일 09:00 ~ 12:50
+
+- 미리 만들어도 된다
+- 각자 원하는 페이지 만들어서 제출(1페이지)
+- 최대한 화려하게 또는 특정 사이트와 똑같이
+- (레이아웃, 폰트, 색상, 크기, 이미지 첨부)
+- html, css, 화면 캡쳐 제출 예정
