--- a/html/11_flex1.html
+++ b/html/11_flex1.html
@@ -3,24 +3,35 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>12_flex 2</title>
+  <title>11_flex 1</title>
 
+  <!-- css 파일은 여러 개 연결 가능! -->
   <link rel="stylesheet" href="../css/flex-style.css">
-  <link rel="stylesheet" href="../css/12_flex2.css">
+  <link rel="stylesheet" href="../css/11_flex1.css">
 </head>
 <body>
   
-  <div class="flex-container">
-    <div class="item item1">item1</div>
-    <div class="item item2">item2</div>
-    <div class="item item3">item3</div>
-    <div class="item item4">item4</div>
-    <div class="item item5">item5</div>
-    <div class="item item6">item6</div>
-    <div class="item item7">item7</div>
-    <div class="item item8">item8</div>
-    <div class="item item9">item9</div>
+  <h1>display : flex  (Flex Box)</h1>
 
+  <pre>
+    요소의 정렬되는 방향, 순서, 요소 간의 간격을
+    하나하나 수치적으로 처리하지 않아도
+    알아서 유연하게 처리해주는 형식(방식);
+
+    <b>flex 이용 시 반드시 알아야 되는 것!!!</b>
+
+    <i>1. flex의 구성</i>
+    - flex container : 정렬이 필요한 요소(item)를 감싸는 요소
+    - item : 정렬이 적용될 요소
+
+    (flex container용 속성, item용 속성이 구분되어 있음 )
+
+    <i>2. flex의 축(axis)</i>
+    - 중심축 (main axis)
+    - 교차축, 반대축 (cross axis)
+  </pre>
+
+  <div class="flex-container">
     <div class="item item1">item1</div>
     <div class="item item2">item2</div>
     <div class="item item3">item3</div>
@@ -33,34 +44,46 @@
   </div>
 
   <pre>
-    <b>flex container 전용 속성 2</b>
+    <b>flex container 전용 속성 1</b>
 
-    <i>5. flex-wrap : item이 한 줄/여러 줄로 배치 되게 지정</i>
+    <i>1. display : flex </i>
+    - 감싸는 요소를 flex 형식으로 변경
+        -> 내부에 작성되는 item을 유연하게 배치하겠다는 의미
 
-    - nowrap (기본값) : 한 줄로 배치, item의 크기가 변경(훼손)될 수 있음
-    - wrap : 여러 줄로 배치
-    - wrap-reverse : 여러 줄로 배치(cross axis 방향 반대)
-
-
-    <i>6. flex-flow :  flex-direction  +  flex-wrap;</i>
+    - 해당 속성이 적용되면 유연하게 배치할 수 있도록
+        내부 item의 자동으로 지정된 margin 속성이 사라진다.
 
 
-    <i>7. align-content : cross axis(교차축)을 기준으로 포장된(wrap) item들을 정렬</i>
-    -> 조건 : flex-wrap이 wrap 또는 wrap-reverse 이여야 함
+    <i>2. flex-direction : 중심축의 방향, 시작/끝 지정</i>
+    - row (기본값)   : x축, L -> R
+    - row-reverse    : x축, R -> L
+    - column         : y축, U -> D
+    - column-reverse : y축, D -> U
 
-    - flex-start    : 축 시작 지점 기준으로 정렬
-    - flex-end      : 축 끝 지점 기준으로 정렬
-    - center        : 축 가운데 정렬
-    - space-around  : item에 축 방향 양쪽으로 일정 크기 공간을 배치
-    - space-evenly  : item에 축 방향 양쪽으로 모두 동일한 크기의 공간을 배치
-    - space-between : space-evenly에서 시작, 끝 item은 flex-container 붙게 배치
+    <i>3. justify-content : 중심축 방향을 기준으로 item 정렬</i>
+    - flex-start : 중심축 시작 지점을 기준으로 정렬
+    - flex-end : 중심축 끝 지점을 기준으로 정렬(순서가 뒤집히진 않음)
+    - center : 중심축 가운데 정렬
 
+    - space-around : item에 중심축 방향으로 일정한 간격을 부여
+    - space-evenly : item에 중심축 방향으로 동일한 간격을 부여
+    - space-between : item에 중심축 방향으로 동일한 간격을 부여
+                        단, 양 끝은 flex-container에 붙게 한다
+
+
+    <i>4. align-items : 교차축을 기준으로 item 정렬</i>
+    - strech (기본값): item을 교차축 방향으로 꽉 찰만큼 늘림
+                단, item에 교차축 방향 크기가 지정되어 있다면 적용 X
+
+    - flex-start : 교차축 시작 지점에 배치
+    - flex-end : 교차축 끝 지점에 배치
+    - center : 교차축 가운데 지점에 배치
+
+    - baseline :  item에 작성된 내용(content)이
+                한 직선에 배치될 수 있도록
+                item을 교차축 방향을 알맞게 움직여 배치
   </pre>
 
 
-  <div class="qwer" id="temp"></div>
-
-
-
 </body>
-</html>
+</html
