--- a/html/15_웹페이지만들기.html
+++ b/html/15_웹페이지만들기.html
@@ -28,8 +28,31 @@
         </section>
         
     </header>
-    <nav></nav>
-    <main></main>
+
+    <nav>
+        <ul class="navbar">
+            <li><a href="#">소개</a></li>
+            <li><a href="#">공지사항</a></li>
+            <li><a href="#">커뮤니티</a></li>
+            <li><a href="#">갤러리</a></li>
+            <li><a href="#">고객센터</a></li>
+        </ul>
+    </nav>
+
+    <!-- 페이지의 주된 내용들 -->
+    <main>
+        <!-- 배너 -->
+        <section class="banner-container">
+            <a href="#" class="banner">
+              <div class="banner-text">
+                <h1>웹 페이지 만들기 연습 중입니다</h1>
+                <p>이미지를 배경으로 만들어서 글을 위에 작성할 수 있습니다</p>
+                <p>재밌다!!!</p>
+              </div>
+            </a>
+          </section>
+
+    </main>
     <footer></footer>
 </body>
 </html>
