오전 3교시 카드 형태 요소를 모아둔 행에서 각 카드의 크기가 변하지 않도록 하는 object-fit: 속성에 대한 학습

--- a/html/15_웹페이지만들기.html
+++ b/html/15_웹페이지만들기.html
@@ -52,7 +52,64 @@
             </a>
           </section>
 
+        <!-- 메인 내용 -->
+        <section class="content-container">
+
+            <!-- 썸네일 이미지/내용(설명) -->
+            <div class="content-row">
+
+                <div class="thumbnail-col">
+                    <img class="thumbnail" src="../images/cats/cat4.jpg" alt="회색 고양이">
+                </div>
+
+                <dliv class="description-col">
+                    <h1><a href="#">여기에 제목 작성</a></h1>
+                    <hr>
+                    <p>
+여기에 이미지 설명을 작성.
+여러 줄로 쓰고 싶은데 어떻게 해야될까?
+                    </p>
+                </dliv>
+
+                
+            </div>
+
+            <div class="content-row">
+                
+
+                <dliv class="description-col">
+                    <h1><a href="#">여기에 제목 작성</a></h1>
+                    <hr>
+                    <p>
+여기에 이미지 설명을 작성.
+여러 줄로 쓰고 싶은데 어떻게 해야될까?
+                    </p>
+                </dliv>
+
+                <div class="thumbnail-col">
+                    <img class="thumbnail" src="../images/cats/cat5.jpg" alt="회색 고양이">
+                </div>
+
+            </div>
+
+            <!-- 카드 형태 요소를 모아둔 행 -->
+            <div class="content-row card-container">
+
+                <div class="card-item">
+                    <a href="#" class="card">
+                        <div class="card-thumbnail-container">
+                            <img src="../images/dogs/dog1.jpg" alt="" class="card-thumbnail">
+                        </div>
+                        <p class="card-content">카드 내용을 작성한다</p>
+                    </a>
+                </div>
+
+            </div>
+
+        </section>
+
     </main>
+
     <footer></footer>
 </body>
 </html>
