--- a/html/15_웹페이지만들기.html
+++ b/html/15_웹페이지만들기.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../css/15_웹페이지만들기.css">
 
 </head>
-<body>
+<body id="body-top">
     <!-- 화면 상단 부분 -->
     <header> <!-- 유지보수 쉽게 하기 위해서 섹션을 하나 더 만든다 -->
         <section class="header-container">
@@ -104,13 +104,113 @@
                     </a>
                 </div>
 
+                <div class="card-item">
+                    <a href="#" class="card">
+                        <div class="card-thumbnail-container">
+                            <img src="../images/dogs/dog2.jpg" alt="" class="card-thumbnail">
+                        </div>
+                        <p class="card-content">카드 내용을 작성한다</p>
+                    </a>
+                </div>
+
+                <div class="card-item">
+                    <a href="#" class="card">
+                        <div class="card-thumbnail-container">
+                            <img src="../images/dogs/dog3.jpg" alt="도그3" class="card-thumbnail">
+                        </div>
+                        <p class="card-content">카드 내용을 작성한다</p>
+                    </a>
+                </div>
+
+                <div class="card-item">
+                    <a href="#" class="card">
+                        <div class="card-thumbnail-container">
+                            <img src="../images/dogs/dog4.jpg" alt="도그4" class="card-thumbnail">
+                        </div>
+                        <p class="card-content">카드 내용을 작성한다</p>
+                    </a>
+                </div>
+
+                <div class="card-item">
+                    <a href="#" class="card">
+                        <div class="card-thumbnail-container">
+                            <img src="../images/dogs/dog5.jpg" alt="도그5" class="card-thumbnail">
+                        </div>
+                        <p class="card-content">카드 내용을 작성한다</p>
+                    </a>
+                </div>
+
+                <div class="card-item">
+                    <a href="#" class="card">
+                        <div class="card-thumbnail-container">
+                            <img src="../images/flowers/flower1.jpg" alt="도그5" class="card-thumbnail">
+                        </div>
+                        <p class="card-content">카드 내용을 작성한다</p>
+                    </a>
+                </div>
+
+                <div class="card-item">
+                    <a href="#" class="card">
+                        <div class="card-thumbnail-container">
+                            <img src="../images/flowers/flower2.jpg" alt="도그5" class="card-thumbnail">
+                        </div>
+                        <p class="card-content">카드 내용을 작성한다</p>
+                    </a>
+                </div>
+
+                <div class="card-item">
+                    <a href="#" class="card">
+                        <div class="card-thumbnail-container">
+                            <img src="../images/flowers/flower3.jpg" class="card-thumbnail">
+                        </div>
+                        <p class="card-content">카드 내용을 작성한다</p>
+                    </a>
+                </div>
+
             </div>
 
         </section>
 
     </main>
 
-    <footer></footer>
+    <!-- 바닥 내용 -->
+    <footer>
+        <p>Copyright &copy; KH Information Educational Institute A-Class</p> <!-- &copy; : 특수문자 ⓒ -->
+
+		<article> <!-- 시맨틱 태그 article -->
+      <a href="#">프로젝트 소개</a>    
+      <span>|</span>
+      <a href="#">이용약관</a>    
+      <span>|</span>
+      <a href="#">개인정보처리방침</a>    
+      <span>|</span>
+      <a href="#">고객센터</a>    
+		</article>
+    </footer>
+
+
+    <!-- 사이드 메뉴 -->
+
+    <aside>
+		<a href="#">
+			<img src="../images/cats/cat1.jpg" alt="이전에 본 글">
+		</a>
+		<a href="#">
+			<img src="../images/cats/cat2.jpg" alt="이전에 본 글">
+		</a>
+		<a href="#">
+			<img src="../images/cats/cat3.jpg" alt="이전에 본 글">
+		</a>
+		<a href="#">
+			<img src="../images/cats/cat4.jpg" alt="이전에 본 글">
+		</a>
+		<hr>
+		<div class="top-button">
+			<a href="#body-top">위로 이동</a>
+		</div>
+	</aside>
+
+
 </body>
 </html>
 
