--- a/html/15_웹페이지만들기.html
+++ b/html/15_웹페이지만들기.html
@@ -29,6 +29,7 @@
         
     </header>
 
+    <!-- 상단 네비게이션 메뉴 -->
     <nav>
         <ul class="navbar">
             <li><a href="#">소개</a></li>
